--- a/Spring/api/build.gradle
+++ b/Spring/api/build.gradle
@@ -6,7 +6,7 @@ buildscript {
 		mavenCentral()
 	}
 	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
 	}
 }
 
@@ -23,9 +23,15 @@ repositories {
 	mavenCentral()
 }
 
-
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-web')
-	compile("org.springframework.boot:spring-boot-starter-actuator")
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile 'org.springframework.boot:spring-boot-starter-web'
+	compile 'org.springframework.boot:spring-boot-starter-actuator'
+	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	compile 'com.h2database:h2'
+	compile "org.liquibase:liquibase-core:3.6.1"
+
+	compileOnly 'org.springframework.boot:spring-boot-devtools'
+
+	testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
