feat: application.properties add new properties

--- a/Spring/api/src/main/resources/application.properties
+++ b/Spring/api/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.data.rest.basePath=/api
+spring.datasource.url=jdbc:h2:file:~/api;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+spring.liquibase.change-log=classpath:migrations/changelog.xml
