--- a/Spring/api/src/main/resources/application.properties
+++ b/Spring/api/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.liquibase.change-log=classpath:migrations/changelog.xml
+
+logging.level.root=off
+
